# fastapi-email-auth

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/fastapi_email_auth/: __init__.py  config.py  dependencies.py  interfaces.py  models.py  routes.py  service.py
src/fastapi_email_auth/storage/: factory.py  memory.py  redis.py
src/fastapi_email_auth/utils/: README.md  __init__.py  bip39.py
tests/integration/: test_auth_flow.py  test_routes.py
tests/unit/: test_bip39.py  test_models.py  test_service.py  test_storage.py
